# aio_bot

./: README.md  echo_bot.py  pyproject.toml
bot/: config.py  echo_bot.py  game_bot.py  utils.py
bot/games/: guess_number.py
bot/scripts/: bot_echo.py
scripts/: bot_echo.py
