[tool.poetry]
name = "telegaiobot"
version = "0.1"
description = ""
authors = ["prStudentka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[tool.poetry.scripts]
start = "bot.scripts.bot_echo:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
